--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,60 +1,165 @@
 ## PRE ##
 html {
-	width: 70%;
+	margin: 0 auto;
+	padding: 0;
 }
 
 body {
+	width: 50%;
 	font-family: 'Wellfleet', cursive;
+	margin: 0 auto;
+	padding: 0;
+	background-color: #fdfdfd;
 }
+
+h1,h2,h3,h4,h5,h6,p {
+	margin: 0;
+	padding: 0;
+}
+
+.offline {
+	font-weight: bold;
+	color: red;
+	text-decoration: underline;
+	text-shadow: 0 0 5px black;
+}
+
+.online {
+	font-weight: bold;
+	color: #00cc33;
+	text-decoration: underline;
+	text-shadow: 0 0 5px black;
+}
+
 
 ## HEADER ##
 
 header {
-
+	position: relative;
+	margin: 0 auto;
 }
 
 header h1 {
-
+	text-align: center;
+	margin: 30px 0 0 0;
+	padding: 0;
+	background-color: #cc00cc;
+	border-top: 1px solid black;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
 }
 
 header p {
-
+	text-align: left;
+	margin: 0;
+	padding: 0 0 0 126px;
+	background-color: #cc00cc;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
 }
 
 nav {
-
+	text-align: center;
 }
 
 nav ul {
+	list-style-type: none;
+	background-color: #cc00cc;
+	padding: 15px 0 15px 0;
+	margin: 0;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
+	border-bottom: 2px solid black;
+}
 
+nav ul li:first-child {
+	margin: 0;
 }
 
 nav ul li {
-
+	display: inline-block;
+	margin-left: 10px;
+	padding: 5px;
+	background-color: #0099cc;
+	border: 1px solid #33ffff;
+	color: white;
 }
 
 
 ## BODY ##
 
-.noticeBanner {
+#wrapper {
+	width: 100%;
+	height: 100%;
+	background-color: #cc00cc;
+}
 
+.noticeBanner {
+	width: 100%;
+	height: 20%;
+}
+
+.noticeBanner .noticeContainer {
+	background-color: #ff4621;
+	text-align: center;
+	border: 2px solid black;
+	margin: 30px;
+}
+
+.noticeBanner .noticeContainer h3,h5 {
+	margin: 0;
+	padding: 0;
 }
 
 #main {
+	float: left;
+	width: 60%;
+}
 
+#mainContainer {
+	height: 100%;
+}
+
+article {
+	margin: 5% 5% 5% 0;
+	padding: 5%;
+}
+
+.default {
+	background-color: #0066cc;
+	color: white;
+	text-align: justify;
 }
 
 #quickLinks {
+	width: 35%;
+	margin: 30px 0 20px 0;
+	float: right;
+	background-color: #cc3300;
+	padding: 15px;
+	border: 1px solid black;
+}
 
+#quickLinks ol li {
+	text-align: justify;
 }
 
 #serversGlance {
+	width: 35%;
+	margin: 0 0 20px 0;
+	float: right;
+	background-color: #ffdd77;
+	padding: 15px;
+	border: 1px solid black;
+}
 
+#serversGlance ul li {
+	text-align: justify;
 }
 
 
 ## FOOTER ##
 
 footer {
-	
+	clear: both;
 }
